Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.11 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.11
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.11.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.11     2013-10-22 (SHARYANTO)
+
+         - Rename ::Private to ::NonCPAN.
+
+
 0.10     2013-10-19 (SHARYANTO)
 
          - Rename dist from Dist-Zilla-PluginBundle-SHARYANTO to
