--- a/README
+++ b/README
@@ -2,9 +2,6 @@ NAME
     Dist::Zilla::PluginBundle::Author::SHARYANTO - Dist::Zilla like
     SHARYANTO when you build your dists
 
-VERSION
-    version 0.10
-
 SYNOPSIS
      # dist.ini
      [@Author::SHARYANTO]
@@ -47,6 +44,23 @@ DESCRIPTION
     is currently a script on my computer, you can get them from my 'scripts'
     github repo but this is optional and the release process won't fail if
     the script does not exist.
+
+HOMEPAGE
+    Please visit the project's homepage at
+    <https://metacpan.org/release/Dist-Zilla-PluginBundle-Author-SHARYANTO>.
+
+SOURCE
+    Source repository is at
+    <https://github.com/sharyanto/perl-Dist-Zilla-PluginBundle-Author-SHARYA
+    NTO>.
+
+BUGS
+    Please report any bugs or feature requests on the bugtracker website
+    http://rt.cpan.org/Public/Dist/Display.html?Name=Dist-Zilla-PluginBundle
+    -Au thor-SHARYANTO
+
+    When submitting a bug or request, please include a test-file or a patch
+    to an existing test-file that illustrates the bug or desired feature.
 
 AUTHOR
     Steven Haryanto <stevenharyanto@gmail.com>
