--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.12     2013-11-05 (SHARYANTO)
+
+         - Add plugins: Author::SHARYANTO::MetaResources & CheckMetaResources.
+
+
 0.11     2013-10-22 (SHARYANTO)
 
          - Rename ::Private to ::NonCPAN.
@@ -50,14 +55,14 @@ Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
 0.03     2012-08-08 (SHARYANTO)
 
-         Add req: DZP::Extras
+         - Add req: DZP::Extras
 
 
 0.02     2012-07-11 (SHARYANTO)
 
-         Add bundle: SHARYANTO::Private, SHARYANTO::Task::Private.
+         - Add bundle: SHARYANTO::Private, SHARYANTO::Task::Private.
 
 
 0.01     2012-04-04 (SHARYANTO)
 
-         First release.
+         - First release.
