Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.14 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.14
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.14.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,11 +1,16 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.14     2013-11-11 (SHARYANTO)
+
+         - Add plugin: LogBuild.
+
+
 0.13     2013-11-08 (SHARYANTO)
 
          - Add a BeforeBuild run to (re)install
-         Dist::Zilla::PluginBundle::Author::SHARYANTO and
-         Pod::Weaver::PluginBundle::Author::SHARYANTO, to help make sure we have
-         the latest plugins.
+           Dist::Zilla::PluginBundle::Author::SHARYANTO and
+           Pod::Weaver::PluginBundle::Author::SHARYANTO, to help make sure we
+           have the latest plugins.
 
 
 0.12     2013-11-05 (SHARYANTO)
