Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.15 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.15
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.15.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
-0.14     2013-11-11 (SHARYANTO)
+0.15     2013-11-12 (SHARYANTO)
+
+         - non-CPAN dists should still produce META.{json,yml}.
+
+
+0.14     2013-11-12 (SHARYANTO)
 
          - Add plugin: LogBuild.
 
