--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.16     2013-11-12 (SHARYANTO)
+
+         - Replace LogBuild with the more proper MetaConfig &
+           MetaConfig::PodWeaver.
+
+
 0.15     2013-11-12 (SHARYANTO)
 
          - non-CPAN dists should still produce META.{json,yml}.
