Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.17 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.17
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.17.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.17     2013-11-13 (SHARYANTO)
+
+         - Remove MetaConfig::PodWeaver, pod weaver plugins config will be in
+           next release of PW.
+
+
 0.16     2013-11-12 (SHARYANTO)
 
          - Replace LogBuild with the more proper MetaConfig &
