--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.18     2013-12-25 (SHARYANTO)
+
+         - Allow skipping updating plugin bundle by setting OFFLINE=1.
+
+
 0.17     2013-11-13 (SHARYANTO)
 
          - Remove MetaConfig::PodWeaver, pod weaver plugins config will be in
