Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.19 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.19
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.19.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.19     2013-12-25 (SHARYANTO)
+
+         - Fix logic bug.
+
+
 0.18     2013-12-25 (SHARYANTO)
 
          - Allow skipping updating plugin bundle by setting OFFLINE=1.
