--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     SHARYANTO when you build your dists
 
 VERSION
-    version 0.19
+    version 0.20
 
 SYNOPSIS
      # dist.ini
@@ -21,11 +21,12 @@ DESCRIPTION
     I still maintain dependencies and increase version number manually (so
     no AutoVersion and AutoPrereqs).
 
-    I install my dists after release (the eat-your-own-dog-food principle).
-    I also archive them using a script called "archive-perl-release". This
-    is currently a script on my computer, you can get them from my 'scripts'
-    github repo but this is optional and the release process won't fail if
-    the script does not exist.
+    I install my dists after release (the eat-your-own-dog-food principle),
+    except when INSTALL=0 environment is specified. I also archive them
+    using a script called "archive-perl-release". This is currently a script
+    on my computer, you can get them from my 'scripts' github repo but this
+    is optional and the release process won't fail if the script does not
+    exist.
 
 HOMEPAGE
     Please visit the project's homepage at
@@ -48,7 +49,7 @@ AUTHOR
     Steven Haryanto <stevenharyanto@gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2013 by Steven Haryanto.
+    This software is copyright (c) 2014 by Steven Haryanto.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
