--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.21     2014-01-21 (SHARYANTO)
+
+         - Fix run command (second '%s' is not filled by Run).
+
+         - Depend on OrePAN for convenience, because my various internal
+           Dist-Zilla-PluginBundle-Project-* bundles (which are based on this
+           bundle) uses OrePAN to inject the tarball to various DarkPANs.
+
+
 0.20     2014-01-09 (SHARYANTO)
 
          - Do not install release when INSTALL=0.
