--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.22     2014-04-01 (SHARYANTO)
+
+         - Replace OurPkgVersion plugin with SHARYANTO::OurPkgVersion.
+
+
 0.21     2014-01-21 (SHARYANTO)
 
          - Fix run command (second '%s' is not filled by Run).
