Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.25 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.25
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.25.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-PluginBundle-Author-SHARYANTO
 
+0.25     2014-04-16 (SHARYANTO)
+
+         - Add plugin: OurDate.
+
+
 0.24     2014-04-09 (SHARYANTO)
 
          - Remove the Run hooks (to install latest plugins & archive release)
